tests/src/frontend/typechecking/exhaustiveness/invalid/overlapping_non_nested_consts.sk
const MyConst: Bool = true;
fun test(): String {
  true match {
  | MyConst
  | MyConst ->
    "Fail\n"
  | false -> "Fail\n"
  | _ -> "Fail\n"
  }
}
